report and pin edit